src/GameDetail/GameDetail.css
#GameDetail{
    height: calc(100*var(--vh));
    overflow: auto;
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: #fff;
    z-index: 100000;
}

#gamePlayers, #gameTiles{
    display: flex;
}

#gamePlayers{
    align-items: flex-start;
    justify-content: center;
    align-items: center;
    flex: 1;
    transition: 0.25s ease-out;
}

#gamePlayers:not(.visible){
    transform: translateY(-10vw) scale(0.8);
}

.game-player {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0 5vw;
    color: #a77;
    border-color: currentColor;
    position: relative;
}

.game-player img{
    display: inline-block;
    margin: auto;
    margin-bottom: 1vw;
    width: calc((70*var(--vh)) - 100vw);
    height: calc((70*var(--vh)) - 100vw);
    min-height: 70px;
    min-width: 70px;
    border-radius: 50%;
    border: 7px solid;
}

#gamePlayers:not(.visible) .game-player img{
    /* width: calc((70*var(--vh)) - 120vw - 1em);
    height: calc((70*var(--vh)) - 120vw - 1em); */
}

.game-player span{
    text-align: center;
    font-weight: bold;
    font-size: 9vw;
    position: relative;
}

.game-player span:after{
    content: '';
    position: absolute;
    top: 12.5vw;
    left: 0;
    right: 0;
    width: 0;
    margin: 0 auto;
    border: 3.5vw solid;
    border-left-color: transparent;
    border-right-color: transparent;
    border-bottom-color: transparent;

    border-top-width: 6vw;
    border-radius: 3px;
}

.game-player:not(.current) span:after,
#gamePlayers:not(.visible) .game-player span:after{
    opacity: 0;
}

.animated-tile{
    position: relative;
    z-index: 10;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
    transition: transform 0.25s ease-out;
}

#playedTiles{
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 100vw;
    height: 20vw;
    padding: 4vw 0;
}

#playedTiles:not(.visible){
    opacity: 0;
    pointer-events: none;
}

#playedTiles .GameTile{
    width: auto;
    max-width: 20vw;
    flex: 1;
    flex-shrink: 0;
    height: inherit;
}

#gameTiles{
    flex-wrap: wrap;
}

#submitBtn:not(.disabled).error{
    background: #da1d1d !important;
}

#savingGameLoader{
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(255, 255, 255, 0.9);
    z-index: 1;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-bottom: 40px;
}

#savingGameLoader svg{
    width: 80px;
    height: 80px;
    margin-bottom: 30px;
}

#savingGameLoader svg circle{
    stroke-width: 2.5px;
}

#GameDetail.show-last-played .GameTile.last-played{
    /* Fixes for pixalation during animation */
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    outline: 1px solid transparent;

    animation: wobble 1s;
    z-index: 1;
}

@keyframes wobble{
    from{
        transform: rotate(-8deg);
    }
    33.333%{
        transform: rotate(8deg);
    }
    66.666%{
        transform: rotate(-8deg);
    }
    to{
        transform: rotate(0);
    }
}

@media all and (min-width: 800px){
    #GameDetail{
        height: 100%;
        position: relative;
        /* left: 400px; */
        max-width: 600px;
        margin: auto;
        overflow: visible;
    }

    #GameDetail #header {
        position: absolute;
        top: 2%;
        left: -20%;
        width: 140%;
        z-index: 100000;
    }
    
    #GameDetail #backButton {
        display: none;
    }

    #gamePlayers{
        transform: translateY(20%);
    }
    
    #gamePlayers:not(.visible){
        transform: translateY(-5%) scale(0.8);
    }

    .game-player {
        padding: 0 40px;
    }
    
    .game-player img{
        margin-bottom: 0;
        width: 70px;
        height: 70px;
        min-height: 0;
        min-width: 0;
        border: 5px solid;
    }
    
    .game-player span{
        font-size: 30px;
    }
    
    .game-player span:after{
        top: 38px;
        border-width: 10px;
        border-top-width: 20px;
    }

    #playedTiles{
        position: relative;
        bottom: auto;
        top: 0;
        width: 100%;
        height: 75px;
        padding: 10px 0;
    }
    
    #playedTiles .GameTile{
        max-width: 85px;
    }

    #gameTiles{
        margin: auto;
        max-width: 475px;
    }
}

